--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,30 +3,145 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    width: 55%;
+    padding: auto;
+    margin: auto;
+}
 nav{
     display: flex;
     justify-content: space-between;
-    background-color: rgba(51, 45, 45, 0.829);
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.959);
 }
 .size{
         display: flex;
 }
+.size img {
+        width: 30px;
+}
+.size div{
+        padding: 5px;
+        text-align: center;
+        color: whitesmoke;
+        text-transform: uppercase;
+        font-size: 12px;
+}
 .s1{
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: start;
+    padding: 60px 60px;
+    height: 400px;
 }
+.s3{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px 20px;
+    height: 300px;
+}
+.s3 img{
+ height: 100px;
+ width: 100px;
+ position: relative;
+ left: 10%;
+}
+.s1 img{
+    width: 60%;
+    height: 60%;
+    padding: 10px;
+
+}
+
 .s2{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgba(7, 35, 63, 0.76);
+    padding: 30px 0 50px 0;
+    background-color: #334D5C;
+    gap: 15%;
+}
+.s2 img{
+    position: relative;
+    left: 15%;
 }
 .txte{
     text-align: left;
-    margin-left: 200px;
+    padding-left: 40px ;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .txte1{
     text-align: left;
-    margin-left: 200px;
+    color: white;
+}
+.card{
+    display: flex;
+    justify-content:space-evenly;
+    text-align: center;
+    color: whitesmoke;
+    background-color: #334D5C;
+
+}
+.card2{
+    display: flex;
+    justify-content:space-evenly;
+    text-align: center;
+}
+.cata1{
+    display: block;
+    text-align: center;
+}
+.c1{
+    text-align: center;
+}
+.cc{
+    width: 150px;
+    height: 150px;
+    padding: 10px 0;
+}
+button{
+    padding: 15px;
+    margin: 30px;
+    border-radius: 2px;
+    border: none;
+}
+.black{
+    background-color: rgba(0, 0, 0, 0.774);
+    color: white;
+}
+.cata1 img{
+    width: 120px;
+    padding: 20px 0px;
+}
+.cata2 img{
+    padding: 20px 0px;
+    width: 120px;
+
+}
+.cata3 img{
+    padding: 20px 0px;
+    width: 120px;
+
+}
+.bas{
+    width: 30px;
+    margin: 5px;
+}
+footer{
+    background-color: rgba(0, 0, 0, 0.959);
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 0px;
+}
+footer h3{
+    color: white;
+    padding: 10px 0;
+}
+.icons{
+    justify-content: space-between;
+    padding: 0px 20px;
+
 }
